style: fix naming and add gap

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -10,5 +10,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   width: 100vw;
 }
